# agent-policy-enforcement-mcp

./: .cursorrules  .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  actor.json  apify-actor.json  glama.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: ci.yml
.well-known/: agent-card.json  agent.json  mcp-server  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_server.py
